tests/negative/traits/method_receiver_empty_init.orng
// 289
trait My_Trait {
    fn a(self) -> ()
}

const My_Type = (x: Int, y: Int)

impl My_Trait for My_Type {
    fn a(self) -> () {  }
}

fn main() -> Int {
    let my_val: My_Type = (200, 45)
    my_val.>a()
    45
}